--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>marmory</title>
+    <title>mei</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
